--- a/CSS/webconf.css
+++ b/CSS/webconf.css
@@ -171,7 +171,7 @@ img::-moz-selection {
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url("../img/conference.jpg");
+  background-image: url("../img/dental.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
